<resources>
    <string name="app_name">Ejercicio01_NunezSantiago</string>

    <string name="texttview_titulo">EEjercicio01</string>
    <string name="textview_text_NumeroA">Ingrese el numero A:</string>
    <string name="edittext_hint_numeroA">numero A</string>
    <string name="textview_text_numeroB">Ingrese el numero B:</string>
    <string name="edittext_hint_numeroB">Numero B</string>
    <string name="textview_hint_Resultado">Resultado de la operacion</string>
    <string name="button_text_sumar">Sumar</string>
    <string name="button_text_siguiente">Siguiente</string>


    <string name="textview_text_tituloresta">Siguiente</string>
    <string name="textview_text_numAresta">Siguiente</string>

    <string name="textview_text_numBresta">Siguiente</string>


</resources>