<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texttview_titulo" />

    <TextView
        android:id="@+id/textViewNumeroA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_text_NumeroA" />

    <EditText
        android:id="@+id/editTextNumeroA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_numeroA"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewNumeroB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_text_numeroB" />

    <EditText
        android:id="@+id/editTextNumeroB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_numeroB"
        android:inputType="date"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textview_hint_Resultado" />

    <Button
        android:id="@+id/buttonSumar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text_sumar" />

    <Button
        android:id="@+id/buttonSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text_siguiente" />

</LinearLayout>